Explicitly add benerator dependency

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <scope>provided</scope>
             <type>pom</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.databene/databene-benerator -->
+        <dependency>
+            <groupId>org.databene</groupId>
+            <artifactId>databene-benerator</artifactId>
+            <version>0.5.9</version>
+        </dependency>
     </dependencies>
 
     <build>
