--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,13 @@
             <artifactId>databene-benerator</artifactId>
             <version>0.5.9</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/hsqldb/hsqldb -->
+        <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
         <dependency>
-            <groupId>hsqldb</groupId>
+            <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>2.4.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
