--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <url>http://openmrs.org</url>
 
     <scm>
-        <connection>scm:git:https://github.com/openmrs/openmrs-contrib-testutils/</connection>
-        <developerConnection>scm:git:https://github.com/openmrs/openmrs-contrib-testutils/</developerConnection>
+        <connection>scm:git:git@github.com:openmrs/openmrs-contrib-testutils.git</connection>
+        <developerConnection>scm:git:git@github.com:openmrs/openmrs-contrib-testutils.git</developerConnection>
         <url>https://github.com/openmrs/openmrs-contrib-testutils/</url>
         <tag>HEAD</tag>
     </scm>
